# dungeondraft-asset-tools

./: .gitignore  Cargo.toml  Makefile.toml  readme.md
src/: asset_pack.rs  main.rs  test_asset_pack.rs
src/asset_pack/: asset_pack.rs  color_overrides.rs  file_meta_data.rs  godot_version.rs  mod.rs  pack_meta.rs  path_utils.rs  tags.rs  test_asset_pack.rs  test_asset_pack_serialization.rs  utils.rs
test_files/: not_a_pack.txt
