[package]
name = "dungeondraft_asset_tools"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
simplelog = "0.10.2"
anyhow = "1.0.44"
byteorder = "1.4.3"
md-5 = "0.9.1"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
clap = "2.33.3"
glob = "0.3.0"

[dev-dependencies]
tempfile = "3.2.0"